--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vscode/vscode-languagedetection",
-  "version": "1.0.12",
+  "version": "1.0.13",
   "description": "An npm package that uses guesslang's ML model to detect source code languages",
   "main": "dist/lib/index.js",
   "module": "dist/lib/index.js",
@@ -23,7 +23,9 @@
   },
   "homepage": "https://github.com/microsoft/vscode-languagedetection#readme",
   "devDependencies": {
-    "@tensorflow/tfjs": "^3.8.0",
+    "@tensorflow/tfjs-backend-cpu": "^3.8.0",
+    "@tensorflow/tfjs-converter": "^3.8.0",
+    "@tensorflow/tfjs-core": "^3.8.0",
     "@types/chai": "^4.2.21",
     "@types/mocha": "8.2.3",
     "@types/node": "^16.3.1",
