--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
   "name": "@vscode/vscode-languagedetection",
-  "version": "1.0.13",
+  "version": "1.0.14",
   "description": "An npm package that uses guesslang's ML model to detect source code languages",
   "main": "dist/lib/index.js",
   "module": "dist/lib/index.js",
   "types": "dist/lib/index.d.ts",
   "scripts": {
-    "clean": "rimraf dist",
-    "build": "npm run clean && webpack --mode production",
-    "watch": "npm run clean && webpack --watch",
     "pretest": "npm run clean && tsc --build ./test",
-    "test": "mocha --recursive dist/test/**/*.test.js"
+    "prepublish": "npm run build",
+    "prepack": "npm run build",
+    "clean": "rimraf dist",
+    "watch": "npm run clean && webpack --watch",
+    "test": "mocha --recursive dist/test/**/*.test.js",
+    "build": "npm run clean && webpack --mode production"
   },
   "repository": {
     "type": "git",
