--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
   "types": "dist/lib/index.d.ts",
   "scripts": {
     "pretest": "npm run clean && tsc --build ./test",
-    "prepublish": "npm test && npm run build",
-    "prepack": "npm run build",
+    "prepublishOnly": "npm test && npm run compile",
+    "prepack": "npm run compile",
     "clean": "rimraf dist",
     "watch": "npm run clean && webpack --watch",
     "test": "mocha --recursive dist/test/**/*.test.js",
-    "build": "npm run clean && webpack --mode production"
+    "compile": "npm run clean && webpack --mode production"
   },
   "repository": {
     "type": "git",
