--- a/package.json
+++ b/package.json
@@ -28,18 +28,18 @@
   },
   "homepage": "https://github.com/microsoft/vscode-languagedetection#readme",
   "devDependencies": {
-    "@tensorflow/tfjs-backend-cpu": "^3.9.0",
-    "@tensorflow/tfjs-converter": "^3.9.0",
-    "@tensorflow/tfjs-core": "^3.9.0",
+    "@tensorflow/tfjs-backend-cpu": "^3.21.0",
+    "@tensorflow/tfjs-converter": "^3.21.0",
+    "@tensorflow/tfjs-core": "^3.21.0",
     "@types/chai": "^4.2.21",
-    "@types/mocha": "8.2.3",
+    "@types/mocha": "^9.1.1",
     "@types/node": "^16.3.1",
     "chai": "^4.3.4",
     "esbuild": "^0.12.15",
-    "mocha": "9.0.2",
+    "mocha": "^9.2.2",
     "node-fetch": "^2.6.1",
     "npm-run-all": "^4.1.5",
-    "rimraf": "3.0.2",
+    "rimraf": "^3.0.2",
     "terser-webpack-plugin": "^5.1.4",
     "ts-loader": "^9.2.3",
     "typescript": "^4.3.5",
