--- a/package.json
+++ b/package.json
@@ -31,19 +31,18 @@
     "@tensorflow/tfjs-backend-cpu": "^3.21.0",
     "@tensorflow/tfjs-converter": "^3.21.0",
     "@tensorflow/tfjs-core": "^3.21.0",
-    "@types/chai": "^4.2.21",
-    "@types/mocha": "^9.1.1",
+    "@types/chai": "^4.3.10",
+    "@types/mocha": "^10.0.4",
     "@types/node": "^16.3.1",
     "chai": "^4.3.4",
     "esbuild": "^0.12.15",
-    "mocha": "^9.2.2",
-    "node-fetch": "^2.6.1",
+    "mocha": "^10.2.0",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
-    "terser-webpack-plugin": "^5.1.4",
-    "ts-loader": "^9.2.3",
-    "typescript": "^4.3.5",
-    "webpack": "~5.44.0",
+    "terser-webpack-plugin": "^5.3.9",
+    "ts-loader": "^9.5.0",
+    "typescript": "^5.2.2",
+    "webpack": "^5.44.0",
     "webpack-cli": "^4.7.2"
   }
 }
