--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "prepublishOnly": "npm test && npm run compile",
     "prepack": "npm run compile",
     "clean": "rimraf dist",
-    "watch": "npm run clean && webpack --watch",
+    "watch": "npm run clean && rollup --config rollup.config.ts --configPlugin 'typescript={tsconfig: `tsconfig.rollup.json`}' --watch",
     "test": "mocha --recursive dist/test/**/*.test.js",
-    "compile": "npm run clean && webpack --mode production"
+    "compile": "npm run clean && NODE_ENV=production rollup --config rollup.config.ts --configPlugin 'typescript={tsconfig: `tsconfig.rollup.json`}'"
   },
   "repository": {
     "type": "git",
@@ -28,6 +28,11 @@
   },
   "homepage": "https://github.com/microsoft/vscode-languagedetection#readme",
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^25.0.7",
+    "@rollup/plugin-json": "^6.0.1",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-terser": "^0.4.4",
+    "@rollup/plugin-typescript": "^11.1.5",
     "@tensorflow/tfjs-backend-cpu": "^3.21.0",
     "@tensorflow/tfjs-converter": "^3.21.0",
     "@tensorflow/tfjs-core": "^3.21.0",
@@ -39,10 +44,7 @@
     "mocha": "^10.2.0",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
-    "terser-webpack-plugin": "^5.3.9",
-    "ts-loader": "^9.5.0",
-    "typescript": "^5.2.2",
-    "webpack": "^5.44.0",
-    "webpack-cli": "^4.7.2"
+    "rollup": "^4.5.1",
+    "typescript": "^5.2.2"
   }
 }
