Use `module: nodenext`.
Test runner can't use ESM, and only 6.0 will support CJS+bundler.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,6 @@
 {
 	"compilerOptions": {
-        "module": "CommonJS",
-		"moduleResolution": "node",
+        "module": "nodenext",
 		"noEmitOnError": false,
 		"strict": true,
 		"esModuleInterop": true,
